2008-02-06  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.18 TAGGED FOR RELEASE ***

	* README:		Bump version number to 8.4.18
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

	* changes:		updates for 8.4.18 release.

2008-02-02  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in (Darwin):	correct Info.plist year substitution in
					non-framework builds.

	* unix/configure:		autoconf-2.13

2008-01-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInterp.c (Tcl_GetAlias): fix for [Bug 1882373]

2008-01-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinSerial.c (SerialCloseProc, TclWinOpenSerialChannel):
	use critical section for read & write side. [Bug 1353846] (newman)

2007-12-31  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.17 TAGGED FOR RELEASE ***

	* changes:		updates for 8.4.17 release.
	* doc/filename.n:	Typo

2007-12-18  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/regguts.h, generic/regc_color.c, generic/regc_nfa.c:
	Fixes for problems created when processing regular expressions that
	generate very large automata. An enormous number of thanks to Will
	Drewry <wad@google.com>, Tavis Ormandy <taviso@google.com>, and Tom
	Lane <tgl@sss.pgh.pa.us> from the Postgresql crowd for their help in
	tracking these problems down. [Bug 1810264]

2007-12-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/README: updated notes

2007-12-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* unix/tclUnixCompat.c (TclpGetHostByName): Really applied
	the change noted on 2007-11-13 by dkf below.

2007-12-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOUtil.c (TclGetOpenMode): Only set the O_APPEND flag
	* tests/ioUtil.test (ioUtil-4.1):	on a channel for the 'a'
	mode and not for 'a+'. [Bug 1773127] (backport from HEAD)

2007-12-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
